# workty

./: Cargo.toml  ContactWeb.csproj  ContactWeb.sln  README.md  Web.Release.config  Web.config
.github/workflows/: release.yml
src/: config.rs  git.rs
tests/: integration.rs
