[package]
name = "git-workty"
version = "0.2.0"
edition = "2021"
description = "Git worktrees as daily-driver workspaces"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/binbandit/workty"
homepage = "https://github.com/binbandit/workty"
keywords = ["git", "worktree", "workspace", "cli", "productivity"]
categories = ["command-line-utilities", "development-tools"]
authors = ["binbandit <crazywolf132@gmail.com>"]
rust-version = "1.70"

[lib]
path = "src/lib.rs"

[[bin]]
name = "git-workty"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
is-terminal = "0.4"
owo-colors = "4"
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
dirs = "6.0"
sha2 = "0.10"
clap_mangen = "0.2"
hex = "0.4"
rayon = "1.10"

[dev-dependencies]
tempfile = "3"
